# rphys

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
pb_reader/: pyproject.toml  rphys-history-fast-error.pb
pb_reader/files/: rphys-history-1769409283410.pb
pb_reader/src/app/: __main__.py
proto/: recording.proto
src/: engine.rs  flocking.rs  lib.rs  main.rs  sim.rs  wasm.rs
src/algorithms/: flocking.rs  flocking_alpha.rs  formation_ecbf.rs  mod.rs  obstacles.rs  qp_project.rs  safe_flocking_alpha.rs
src/models/: particles.rs
www/: index.html  main.js
