[package]
name = "rphys"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
# default-run = "devserver"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nalgebra = "0.33"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# plotters = "0.3"

[features]
default = []
parallel = ["rayon"]

[dependencies.rayon]
version = "1.10"
optional = true
